# EasyUnitTestFramework

./: CMakeLists.txt  LICENSE  README.md  TODO  TODO.md  VERSION.md
examples/new/: basic_test.cpp
examples/one_line_test_suite/: CMakeLists.txt  main.cpp
examples/output_file/: CMakeLists.txt  main.cpp
examples/section_test/: CMakeLists.txt  main.cpp
examples/simple_setup/: CMakeLists.txt  main.cpp
examples/sorting/: CMakeLists.txt  main.cpp  quicksort.cpp  quicksort.hpp
examples/tests_in_different_files/: CMakeLists.txt  main.cpp  test_sample.cpp  test_sample.hpp
include/EUTF/: EUTF.hpp
src/: EUTF.cpp  EUTF.hpp
usage/: CMakeLists.txt  main.cpp
usage/dependencies/EUTF/: CMakeLists.txt
usage/dependencies/EUTF/examples/tests_in_different_files/: CMakeLists.txt
usage/dependencies/EUTF/src/: EUTF.cpp  EUTF.hpp
